feat: [CDS-80251] Add support for simpler output of a pod (#53587)
* feat: [CDS-80251] Add support for simpler output of a pod

* feat: [CDS-80251] Add support for simpler output of a pod for BG and Canary steps

* feat: [CDS-80251] Add support for simpler output of a pod forHelm deploy step

* feat: [CDS-80251] add null checkers